Fix and Features Update

--- a/templates/admin/import_model/edit.html.twig
+++ b/templates/admin/import_model/edit.html.twig
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block body_javascript %}
-    {{ encore_entry_script_tags('bootstrap-js') }}
+{#    {{ encore_entry_script_tags('bootstrap-js') }}#}
     {{ encore_entry_script_tags('bootstrap-select') }}
     {{ encore_entry_script_tags('app') }}
 {% endblock %}
