--- a/templates/territoryPortrait/index.html.twig
+++ b/templates/territoryPortrait/index.html.twig
@@ -11,10 +11,10 @@
                     </button>
                 </div>
                 <div class="panel-heading">
-                    <img class="navbar__logo mr-0" src="{{ asset('build/images/republique.82f18a83.png') }}"
-                         alt="template.data.gouv.fr"/>
-                    <img src="{{ asset('build/images/prefecture.bc76f27f.png') }}" class="navbar__gouvfr"
-                         alt="logo préfecture pays de la loire"/>
+                    <img src="{{ asset('build/images/PREF_region_Provence_Alpes_Cote_d_Azur_CMJN.81808c6e.jpg') }}"
+                         alt="logo préfecture PACA" style="height: 250px; "/>
+                    <img src="{{ asset('build/images/LOGO_PACA.478faa80.png') }}"
+                         alt="logo préfecture pays de la loire" style="height: 50px;"/>
                     <h1 class="mt-3 text-center">Portrait de territoire</h1>
                     <h2 class="mt-3 text-center">{{ filters['yearStart'] }}
                         {% if filters['yearEnd'] is not null %}
