--- a/templates/admin/import_model/new.html.twig
+++ b/templates/admin/import_model/new.html.twig
@@ -28,6 +28,7 @@
                         {{ form_row(form.config) }}
                         {{ form_row(form.importType) }}
                         {{ form_row(form.isMapView) }}
+                        {{ form_row(form.color) }}
                     </div>
                     <div class="col-6">
                         {{ form_row(form.domains) }}
@@ -56,7 +57,7 @@
 {% endblock %}
 
 {% block body_javascript %}
-    {{ encore_entry_script_tags('bootstrap-js') }}
+{#    {{ encore_entry_script_tags('bootstrap-js') }}#}
     {{ encore_entry_script_tags('bootstrap-select') }}
     {{ encore_entry_script_tags('app') }}
 {% endblock %}
